style.css
body {
    font-family: 'Roboto', sans-serif, 'Oxygen';
    margin: 0;
    min-height: 100vh;
}

.main-header {
    display: flex;
    justify-content: space-between;
    padding: 5px;
    margin-bottom: 40px;
    align-items: center;
}

ul {
    list-style-type: none;
    display: flex;
    gap: 10px;
    font-weight: 300px;
    margin: 0px;
    padding: 0px;
    color: grey;
}

.hero-section {
    display: flex;
    justify-content: space-between;
}

.hero,
.footer {
    background: #1F2937;
}

.main-text {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 900;
}

.hero-section .text,
.main-header .text {
    font-size: 18px;
    color: #E5E7EB;
}

.logo-text {
    font-size: 24px;
    color: #F9FAF8;
}

button,
.cta {
    background-color: #3882F6;
    color: #E5E7EB;
}

.hero-section button {
    border: 1px solid #3882F6;
    border-radius: 8px;
}

.cta button {
    border: 1px solid #E5E7EB;
    border-radius: 8px;
}

button {
    padding: 8px 16px;
    font-weight: 600;
}

.information-header {
    font-size: 36px;
    color: #1F2937;
    font-weight: 900;
}

.section .text {
    color: grey;
}

.testimonial {
    background-color: #E5E7EB;

}

.footer {
    color: #E5E7EB;
}

.quote-text {
    font-size: 36px;
    color: #1F2937;
    font-weight: 300;
}

.quote-author {
    font-weight: 900;
}

.information img,
.cta {
    border: 2px solid #3882F6;
    border-radius: 8px;
}

